Just some typo fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container text-center">
   <h1 class="mb-5">Abuse Analayzer</h1>
-  <p>Hi! I have Artificial Intelligience and I can Classify Abusive and Non-Abusive words</p>
+  <p>Hi! I have Artificial Intelligience and I can Classify Abusive and Non-Abusive Sentences</p>
   <p class="mb-5">আমারে গালি দাও । আমি Percentage এ বুঝিয়ে দিব কোনটা গালি কোনটা না । </p>
   <input id="text" type="text" placeholder="Type in English....">
   <button class="btn btn-primary " id="submit">Submit</button>
